tests/snapshots/formats__cso__game.cso.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ game.cso — CSO (deflate) v1, 4.0 KiB image in 2 blocks of 2.0 KiB  [0x0+0x946]
  ▾ Header  [0x0+0x18]
      Magic: "CISO"  [0x0+0x4]
      Header size: 24  [0x4+0x4]
      Uncompressed size: 4096  [0x8+0x8]
      Block size: 2048  [0x10+0x4]
      Version: 1  [0x14+0x1]
      Index alignment (shift): 0  [0x15+0x1]
      Reserved: 00 00  |..|  [0x16+0x2]
  ▾ Blocks — 2 blocks  [0x18+0xc]
    ▾ Block 0: 0x24 — 0x800 bytes decompressed  [0x24+0x122]
        Data  [#1:0x0+0x800]
      Block 1: 0x146 — stored  [0x146+0x800]
