tests/snapshots/formats__cso__text.zso.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ text.zso — ZSO (LZ4) v1, 4 KiB image in 3 blocks of 2 KiB  [0x0+0xaa5]
  ▾ Header  [0x0+0x18]
      Magic: "ZISO"  [0x0+0x4]
      Header size: 24  [0x4+0x4]
      Uncompressed size: 4890  [0x8+0x8]
      Block size: 2048  [0x10+0x4]
      Version: 1  [0x14+0x1]
      Index alignment (shift): 0  [0x15+0x1]
      Reserved: 00 00  |..|  [0x16+0x2]
  ▾ Blocks — 3 blocks  [0x18+0x10]
    ▾ Block 0: 0x28 — UTF-8 text, LF line endings, 86 lines  [0x28+0x1c4]
        Encoding: "UTF-8"
        Line endings: "LF" — 85 LF, 0 CRLF, 0 CR
      ▾ Lines — 86 lines  [#1:0x0+0x800]
          Line 1: "ZSO sector text line 0"  [#1:0x0+0x16]
          Line 2: "ZSO sector text line 1"  [#1:0x17+0x16]
          Line 3: "ZSO sector text line 2"  [#1:0x2e+0x16]
          Line 4: "ZSO sector text line 3"  [#1:0x45+0x16]
          Line 5: "ZSO sector text line 4"  [#1:0x5c+0x16]
          Line 6: "ZSO sector text line 5"  [#1:0x73+0x16]
          Line 7: "ZSO sector text line 6"  [#1:0x8a+0x16]
          Line 8: "ZSO sector text line 7"  [#1:0xa1+0x16]
          Line 9: "ZSO sector text line 8"  [#1:0xb8+0x16]
          Line 10: "ZSO sector text line 9"  [#1:0xcf+0x16]
          Line 11: "ZSO sector text line 10"  [#1:0xe6+0x17]
          Line 12: "ZSO sector text line 11"  [#1:0xfe+0x17]
          Line 13: "ZSO sector text line 12"  [#1:0x116+0x17]
          Line 14: "ZSO sector text line 13"  [#1:0x12e+0x17]
          Line 15: "ZSO sector text line 14"  [#1:0x146+0x17]
          Line 16: "ZSO sector text line 15"  [#1:0x15e+0x17]
          Line 17: "ZSO sector text line 16"  [#1:0x176+0x17]
          Line 18: "ZSO sector text line 17"  [#1:0x18e+0x17]
          Line 19: "ZSO sector text line 18"  [#1:0x1a6+0x17]
          Line 20: "ZSO sector text line 19"  [#1:0x1be+0x17]
          Line 21: "ZSO sector text line 20"  [#1:0x1d6+0x17]
          Line 22: "ZSO sector text line 21"  [#1:0x1ee+0x17]
          Line 23: "ZSO sector text line 22"  [#1:0x206+0x17]
          Line 24: "ZSO sector text line 23"  [#1:0x21e+0x17]
          Line 25: "ZSO sector text line 24"  [#1:0x236+0x17]
          Line 26: "ZSO sector text line 25"  [#1:0x24e+0x17]
          Line 27: "ZSO sector text line 26"  [#1:0x266+0x17]
          Line 28: "ZSO sector text line 27"  [#1:0x27e+0x17]
          Line 29: "ZSO sector text line 28"  [#1:0x296+0x17]
          Line 30: "ZSO sector text line 29"  [#1:0x2ae+0x17]
          Line 31: "ZSO sector text line 30"  [#1:0x2c6+0x17]
          Line 32: "ZSO sector text line 31"  [#1:0x2de+0x17]
          Line 33: "ZSO sector text line 32"  [#1:0x2f6+0x17]
          Line 34: "ZSO sector text line 33"  [#1:0x30e+0x17]
          Line 35: "ZSO sector text line 34"  [#1:0x326+0x17]
          Line 36: "ZSO sector text line 35"  [#1:0x33e+0x17]
          Line 37: "ZSO sector text line 36"  [#1:0x356+0x17]
          Line 38: "ZSO sector text line 37"  [#1:0x36e+0x17]
          Line 39: "ZSO sector text line 38"  [#1:0x386+0x17]
          Line 40: "ZSO sector text line 39"  [#1:0x39e+0x17]
          Line 41: "ZSO sector text line 40"  [#1:0x3b6+0x17]
          Line 42: "ZSO sector text line 41"  [#1:0x3ce+0x17]
          Line 43: "ZSO sector text line 42"  [#1:0x3e6+0x17]
          Line 44: "ZSO sector text line 43"  [#1:0x3fe+0x17]
          Line 45: "ZSO sector text line 44"  [#1:0x416+0x17]
          Line 46: "ZSO sector text line 45"  [#1:0x42e+0x17]
          Line 47: "ZSO sector text line 46"  [#1:0x446+0x17]
          Line 48: "ZSO sector text line 47"  [#1:0x45e+0x17]
          Line 49: "ZSO sector text line 48"  [#1:0x476+0x17]
          Line 50: "ZSO sector text line 49"  [#1:0x48e+0x17]
          Line 51: "ZSO sector text line 50"  [#1:0x4a6+0x17]
          Line 52: "ZSO sector text line 51"  [#1:0x4be+0x17]
          Line 53: "ZSO sector text line 52"  [#1:0x4d6+0x17]
          Line 54: "ZSO sector text line 53"  [#1:0x4ee+0x17]
          Line 55: "ZSO sector text line 54"  [#1:0x506+0x17]
          Line 56: "ZSO sector text line 55"  [#1:0x51e+0x17]
          Line 57: "ZSO sector text line 56"  [#1:0x536+0x17]
          Line 58: "ZSO sector text line 57"  [#1:0x54e+0x17]
          Line 59: "ZSO sector text line 58"  [#1:0x566+0x17]
          Line 60: "ZSO sector text line 59"  [#1:0x57e+0x17]
          Line 61: "ZSO sector text line 60"  [#1:0x596+0x17]
          Line 62: "ZSO sector text line 61"  [#1:0x5ae+0x17]
          Line 63: "ZSO sector text line 62"  [#1:0x5c6+0x17]
          Line 64: "ZSO sector text line 63"  [#1:0x5de+0x17]
          Line 65: "ZSO sector text line 64"  [#1:0x5f6+0x17]
          Line 66: "ZSO sector text line 65"  [#1:0x60e+0x17]
          Line 67: "ZSO sector text line 66"  [#1:0x626+0x17]
          Line 68: "ZSO sector text line 67"  [#1:0x63e+0x17]
          Line 69: "ZSO sector text line 68"  [#1:0x656+0x17]
          Line 70: "ZSO sector text line 69"  [#1:0x66e+0x17]
          Line 71: "ZSO sector text line 70"  [#1:0x686+0x17]
          Line 72: "ZSO sector text line 71"  [#1:0x69e+0x17]
          Line 73: "ZSO sector text line 72"  [#1:0x6b6+0x17]
          Line 74: "ZSO sector text line 73"  [#1:0x6ce+0x17]
          Line 75: "ZSO sector text line 74"  [#1:0x6e6+0x17]
          Line 76: "ZSO sector text line 75"  [#1:0x6fe+0x17]
          Line 77: "ZSO sector text line 76"  [#1:0x716+0x17]
          Line 78: "ZSO sector text line 77"  [#1:0x72e+0x17]
          Line 79: "ZSO sector text line 78"  [#1:0x746+0x17]
          Line 80: "ZSO sector text line 79"  [#1:0x75e+0x17]
          Line 81: "ZSO sector text line 80"  [#1:0x776+0x17]
          Line 82: "ZSO sector text line 81"  [#1:0x78e+0x17]
          Line 83: "ZSO sector text line 82"  [#1:0x7a6+0x17]
          Line 84: "ZSO sector text line 83"  [#1:0x7be+0x17]
          Line 85: "ZSO sector text line 84"  [#1:0x7d6+0x17]
          Line 86: "ZSO sector text li"  [#1:0x7ee+0x12]
      Block 1: 0x1ec — stored  [0x1ec+0x800]
    ▾ Block 2: 0x9ec — UTF-8 text, LF line endings, 32 lines  [0x9ec+0xb9]
        Encoding: "UTF-8"
        Line endings: "LF" — 32 LF, 0 CRLF, 0 CR
      ▾ Lines — 32 lines  [#2:0x0+0x31a]
          Line 1: "ctor text line 168"  [#2:0x0+0x12]
          Line 2: "ZSO sector text line 169"  [#2:0x13+0x18]
          Line 3: "ZSO sector text line 170"  [#2:0x2c+0x18]
          Line 4: "ZSO sector text line 171"  [#2:0x45+0x18]
          Line 5: "ZSO sector text line 172"  [#2:0x5e+0x18]
          Line 6: "ZSO sector text line 173"  [#2:0x77+0x18]
          Line 7: "ZSO sector text line 174"  [#2:0x90+0x18]
          Line 8: "ZSO sector text line 175"  [#2:0xa9+0x18]
          Line 9: "ZSO sector text line 176"  [#2:0xc2+0x18]
          Line 10: "ZSO sector text line 177"  [#2:0xdb+0x18]
          Line 11: "ZSO sector text line 178"  [#2:0xf4+0x18]
          Line 12: "ZSO sector text line 179"  [#2:0x10d+0x18]
          Line 13: "ZSO sector text line 180"  [#2:0x126+0x18]
          Line 14: "ZSO sector text line 181"  [#2:0x13f+0x18]
          Line 15: "ZSO sector text line 182"  [#2:0x158+0x18]
          Line 16: "ZSO sector text line 183"  [#2:0x171+0x18]
          Line 17: "ZSO sector text line 184"  [#2:0x18a+0x18]
          Line 18: "ZSO sector text line 185"  [#2:0x1a3+0x18]
          Line 19: "ZSO sector text line 186"  [#2:0x1bc+0x18]
          Line 20: "ZSO sector text line 187"  [#2:0x1d5+0x18]
          Line 21: "ZSO sector text line 188"  [#2:0x1ee+0x18]
          Line 22: "ZSO sector text line 189"  [#2:0x207+0x18]
          Line 23: "ZSO sector text line 190"  [#2:0x220+0x18]
          Line 24: "ZSO sector text line 191"  [#2:0x239+0x18]
          Line 25: "ZSO sector text line 192"  [#2:0x252+0x18]
          Line 26: "ZSO sector text line 193"  [#2:0x26b+0x18]
          Line 27: "ZSO sector text line 194"  [#2:0x284+0x18]
          Line 28: "ZSO sector text line 195"  [#2:0x29d+0x18]
          Line 29: "ZSO sector text line 196"  [#2:0x2b6+0x18]
          Line 30: "ZSO sector text line 197"  [#2:0x2cf+0x18]
          Line 31: "ZSO sector text line 198"  [#2:0x2e8+0x18]
          Line 32: "ZSO sector text line 199"  [#2:0x301+0x18]
